deploy/kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identrail-api
  namespace: identrail
spec:
  selector:
    app: identrail-api
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
